--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
     flutter:
         sdk: flutter
     flutter_bloc: ^8.1.4
+    http: ^1.2.1
 
 dev_dependencies:
     flutter_test:
